<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/mainTheme.login_register"
    tools:context=".activities.LoginActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="169dp"
                android:layout_height="108dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="135dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="65dp"
                android:src="@drawable/logo" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="206dp"
                android:layout_height="27dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="95dp"
                android:src="@drawable/logo_letras" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/login"
            android:textColor="@color/colorSecondaryText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16sp"
            app:fontFamily="@font/quicksand" />

        <ProgressBar
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:elevation="20dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="3">

            <TableRow
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/button_lang_es"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape_map"
                    app:srcCompat="@drawable/ic_spain" />

                <ImageButton
                    android:id="@+id/button_lang_ca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape_map"
                    app:srcCompat="@drawable/ic_flag_of_catalonia" />

                <ImageButton
                    android:id="@+id/button_lang_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_shape_map"
                    app:srcCompat="@drawable/ic_estados_unidos" />
            </TableRow>
        </TableLayout>


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>