<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBarProfile"
            android:layout_width="73dp"
            android:layout_height="77dp"
            android:layout_marginStart="168dp"
            android:layout_marginTop="354dp"
            android:layout_marginEnd="170dp"
            android:layout_marginBottom="300dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_wrapHeight="202"
            tools:layout_conversion_wrapWidth="192" />
    </android.support.constraint.ConstraintLayout>

    <TableLayout
        android:id="@+id/mainActivityView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:theme="@style/mainTheme.mainScreen"
        tools:context=".activities.ProfileActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

        <TableRow>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:layout_span="2"
                android:src="@drawable/icon_main_user"
                tools:ignore="ContentDescription" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/labelMyProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_span="2"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/my_profile"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="#FF909090" />

        <TableRow>

            <TextView
                android:id="@+id/labelUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="2dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/username" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:background="@null"
                android:drawableRight="@drawable/ic_edit"
                android:fontFamily="@font/quicksand_light"
                android:paddingStart="20dp"
                android:paddingEnd="5dp" />



        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="2dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/email" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:fontFamily="@font/quicksand_light"
                android:paddingStart="20dp"
                android:paddingEnd="5dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/labelTelephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="2dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textViewTelephone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:fontFamily="@font/quicksand_light"
                android:paddingStart="20dp"
                android:paddingEnd="5dp" />
        </TableRow>

    </TableLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_navigation" />

</android.support.v4.widget.DrawerLayout>
